fix: banner and body styling

--- a/server/frontend/static/styles/banner.css
+++ b/server/frontend/static/styles/banner.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    width: 100%;
   }
   
 .banner-fade {
@@ -9,7 +10,7 @@
   top: 0;
   left: 10%;
   width: 50%; 
-  height: 770px;
+  height: 100%;
   background: rgba(65, 65, 65, 0.5);
   display: flex;
   justify-content: center;
@@ -18,10 +19,11 @@
 
 .banner-text {
   color: white;
-  font-size: 96px;
+  font-size: 7vw;
   font-weight: bold;
   position: absolute;
   left: 15%;
+  top: 20%;
 }
 
 .banner-text:nth-child(1) {
@@ -38,7 +40,7 @@
 
 .banner-subtext {
     color: white;
-    font-size: 16px;
+    font-size: 1.2vw;
     font-weight: bold;
     position: relative;
 }
@@ -47,18 +49,23 @@
   background-color: rgba(140, 0, 0, 0.8);
   color: white;
   border: none;
-  padding: 15px 30px;
-  font-size: 21px; 
+  padding: 1.5vw 3vw;
+  font-size: 2vw;
   font-weight: bold;
   cursor: pointer;
   position: absolute;
-  top: 80%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  bottom: 5%;
+  right: 5%;
   transition: background-color 0.3s ease;
 }
 
 .banner-button:hover {
   border: 2px solid rgba(140, 0, 0);
   background-color: rgba(140, 0, 0);
+}
+
+img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
