--- a/server/frontend/static/styles/banner.css
+++ b/server/frontend/static/styles/banner.css
@@ -53,9 +53,8 @@
   font-size: 2vw;
   font-weight: bold;
   cursor: pointer;
-  position: absolute;
-  bottom: 5%;
-  right: 5%;
+  position: relative;
+  left: 65%;
   transition: background-color 0.3s ease;
 }
 
