--- a/server/frontend/src/components/Login/Login.css
+++ b/server/frontend/src/components/Login/Login.css
@@ -1,3 +1,10 @@
+.main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+}
+
 .input-panel {
     display: flex;
     flex-direction: row;
